--- a/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
+++ b/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
@@ -6,14 +6,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
+<AnchorPane fx:id="cmbTema1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
    <children>
       <ListView fx:id="inventoryListView" layoutX="200.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="removeItemOnClick" layoutX="274.0" layoutY="326.0" mnemonicParsing="false" text="Button" />
-      <ComboBox layoutX="35.0" layoutY="100.0" prefWidth="150.0" />
-      <ComboBox layoutX="35.0" layoutY="200.0" prefWidth="150.0" />
-      <ComboBox layoutX="35.0" layoutY="149.0" prefWidth="150.0" />
+      <ComboBox fx:id="WeaponsBox" layoutX="35.0" layoutY="100.0" prefWidth="150.0" />
+      <ComboBox fx:id="ArmorBox" layoutX="35.0" layoutY="200.0" prefWidth="150.0" />
+      <ComboBox fx:id="ConsumeableBox" layoutX="35.0" layoutY="149.0" prefWidth="150.0" />
       <TextField fx:id="selectedItemTextField" layoutX="226.0" layoutY="63.0" />
    </children>
 </AnchorPane>
