--- a/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
+++ b/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,9 +10,14 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
    <children>
       <ListView fx:id="inventoryListView" layoutX="332.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="removeItemButton" layoutX="312.0" layoutY="321.0" mnemonicParsing="false" text="Slet Item" />
-      <TextField fx:id="selectedItemTextField" layoutX="226.0" layoutY="55.0" />
+      <Button fx:id="removeItemButton" layoutX="401.0" layoutY="321.0" mnemonicParsing="false" onAction="#removeItemOnClick" text="Slet Item" />
+      <TextField fx:id="selectedItemTextField" layoutX="153.0" layoutY="55.0" prefHeight="25.0" prefWidth="295.0" />
       <ListView fx:id="itemListView" layoutX="69.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="addItemButton" layoutX="226.0" layoutY="321.0" mnemonicParsing="false" onAction="#addItemOnClick" text="Tilføj Item" />
+      <Button fx:id="addItemButton" layoutX="135.0" layoutY="321.0" mnemonicParsing="false" onAction="#addItemOnClick" text="Tilføj Item" />
+      <ComboBox layoutX="225.0" layoutY="321.0" prefWidth="150.0" promptText="Sorter">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </ComboBox>
    </children>
 </AnchorPane>
