--- a/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
+++ b/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
@@ -3,21 +3,24 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
    <children>
       <ListView fx:id="inventoryListView" layoutX="332.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="removeItemButton" layoutX="401.0" layoutY="321.0" mnemonicParsing="false" onAction="#removeItemOnClick" text="Slet Item" />
       <TextField fx:id="selectedItemTextField" layoutX="153.0" layoutY="55.0" prefHeight="25.0" prefWidth="295.0" />
       <ListView fx:id="itemListView" layoutX="69.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="addItemButton" layoutX="135.0" layoutY="321.0" mnemonicParsing="false" onAction="#addItemOnClick" text="Tilføj Item" />
-      <ComboBox fx:id="sortingCombobox" layoutX="225.0" layoutY="321.0" onAction="#sortingButtonOnClick" prefWidth="150.0" promptText="Sorter">
+      <ComboBox fx:id="sortingCombobox" layoutX="358.0" layoutY="354.0" onAction="#sortingButtonOnClick" prefWidth="150.0" promptText="Sorter">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ComboBox>
+      <Label fx:id="inventoryLimitLabel" layoutX="504.0" layoutY="300.0" text="Label" />
+      <Label fx:id="inventoryWeightLabel" layoutX="504.0" layoutY="317.0" text="Label" />
    </children>
 </AnchorPane>
