Delvis Exception Handling og der er blevet lavet et fejlbesked UI tingel tangel

--- a/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
+++ b/src/main/resources/com/consolelogteam/inventorysystem/hello-view.fxml
@@ -5,8 +5,10 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.consolelogteam.inventorysystem.GUIController">
    <children>
@@ -20,7 +22,15 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ComboBox>
-      <Label fx:id="inventoryLimitLabel" layoutX="504.0" layoutY="300.0" text="Label" />
-      <Label fx:id="inventoryWeightLabel" layoutX="504.0" layoutY="317.0" text="Label" />
+      <Label fx:id="inventoryLimitLabel" layoutX="504.0" layoutY="300.0" />
+      <Label fx:id="inventoryWeightLabel" layoutX="504.0" layoutY="317.0" />
+      <AnchorPane fx:id="errorMessageAnchorPane" prefHeight="400.0" prefWidth="600.0" visible="false">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eff4f8" height="200.0" layoutX="138.0" layoutY="64.0" stroke="BLACK" strokeType="INSIDE" width="324.0" />
+            <TextArea fx:id="errorMessageOutput" editable="false" layoutX="200.0" layoutY="117.0" prefHeight="76.0" prefWidth="200.0" promptText="Her er fejl beskeden" wrapText="true" />
+            <Button layoutX="275.0" layoutY="211.0" mnemonicParsing="false" onAction="#understoodButtonOnClick" text="Forstået" />
+            <Label layoutX="264.0" layoutY="87.0" text="Fejl Meddelse" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
